# inferfw

./: summary.txt
config/: pipeline_example.yaml
docs/: architecture.md  canonical_data.md  code_quality.md  config_schema.md  deployment.md  implementation_plan.md  interfaces.md  mvp_scope.md  plugin_architecture.md  role.md  runtime_lifecycle.md  service_loop.md  specification.md  testing_strategy.md
docs/examples/: README.md  dummy_model_profile.yaml  fake_robot_profile.yaml  mvp_fake_run.yaml  onnx_policy_profile.yaml  openpi_vla_profile.yaml  sim_replay_onnx_run.yaml  tabletop_arm_profile.yaml  unitree_g1_openpi_run.yaml  unitree_g1_profile.yaml
refer/inferfw/: pyproject.toml
refer/inferfw-openpi/: pyproject.toml
refer/inferfw-openpi/examples/: run_model_runtime.py
refer/inferfw-openpi/src/inferfw_openpi/: __init__.py  runtime.py
refer/inferfw-openpi/tests/: test_runtime_unit.py
refer/inferfw/src/inferfw/: __init__.py  errors.py
refer/inferfw/src/inferfw/core/: __init__.py  model_runtime_session.py
refer/inferfw/src/inferfw/data/: __init__.py  model.py  pi.py
refer/inferfw/src/inferfw/interfaces/: __init__.py  model_runtime.py
refer/inferfw/src/inferfw/plugins/: __init__.py
refer/inferfw/src/inferfw/plugins/dummy_model/: __init__.py  runtime.py
refer/inferfw/src/inferfw/registry/: __init__.py  builtin.py  registry.py
refer/inferfw/tests/: test_model_runtime_integration.py
