[project]
name = "inferfw-openpi"
version = "0.1.0"
description = "inferfw ModelRuntime plugin for openpi (in-process)"
requires-python = ">=3.11"
dependencies = [
    "inferfw",
    "openpi",
]

[project.entry-points."inferfw.model_runtime"]
openpi = "inferfw_openpi.runtime:OpenPiModelRuntime"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.4"]

[tool.uv.sources]
inferfw = { workspace = true }
openpi = { path = "../.." }

[tool.hatch.build.targets.wheel]
packages = ["src/inferfw_openpi"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
