[project]
name = "inferfw"
version = "0.1.0"
description = "Inference service framework (core)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.22.4,<2.0.0",
    "typing-extensions>=4.12.2",
]

[project.entry-points."inferfw.model_runtime"]
dummy = "inferfw.plugins.dummy_model.runtime:DummyModelRuntime"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/inferfw"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
